@@ -47,9 +47,9 @@ int main()
     image2d<bool> bin = scribo::binarization::niblack(input, 101);
 
     image2d<bool> ref;
-    io::pbm::save(bin, SCRIBO_TESTS_DIR "binarization/niblack.ref.pbm");
+    io::pbm::load(ref, SCRIBO_TESTS_DIR "binarization/niblack.ref.pbm");
 
-    //mln_assertion(bin == ref);
+    mln_assertion(bin == ref);
   }
 
   // even height and odd width
@@ -60,9 +60,9 @@ int main()
     image2d<bool> bin = scribo::binarization::niblack(input, 101);
 
     image2d<bool> ref;
-    io::pbm::save(bin, SCRIBO_TESTS_DIR "binarization/niblack_wodd_heven.ref.pbm");
+    io::pbm::load(ref, SCRIBO_TESTS_DIR "binarization/niblack_wodd_heven.ref.pbm");
 
-//    mln_assertion(bin == ref);
+    mln_assertion(bin == ref);
   }
 
   // odd height and even width
@@ -73,9 +73,9 @@ int main()
     image2d<bool> bin = scribo::binarization::niblack(input, 101);
 
     image2d<bool> ref;
-    io::pbm::save(bin, SCRIBO_TESTS_DIR "binarization/niblack_weven_hodd.ref.pbm");
+    io::pbm::load(ref, SCRIBO_TESTS_DIR "binarization/niblack_weven_hodd.ref.pbm");
 
-//    mln_assertion(bin == ref);
+    mln_assertion(bin == ref);
   }
 
   // odd height and width
@@ -86,8 +86,8 @@ int main()
     image2d<bool> bin = scribo::binarization::niblack(input, 101);
 
     image2d<bool> ref;
-    io::pbm::save(bin, SCRIBO_TESTS_DIR "binarization/niblack_wodd_hodd.ref.pbm");
+    io::pbm::load(ref, SCRIBO_TESTS_DIR "binarization/niblack_wodd_hodd.ref.pbm");
 
-//    mln_assertion(bin == ref);
+    mln_assertion(bin == ref);
   }
 }
